--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "npm run build && node ./build/index.js",
     "build": "tsc",
-    "dev": "nodemon index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only index.ts"
   },
   "repository": {
     "type": "git",
@@ -16,13 +16,25 @@
   },
   "homepage": "https://github.com/hazemKrimi/files-app-server#readme",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/express": "^4.17.9",
+    "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongoose": "^5.10.2",
     "@types/node": "^14.14.11",
-    "nodemon": "^2.0.6",
-    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.2"
   },
   "dependencies": {
-    "graphql-yoga": "^1.18.3",
+    "@typegoose/typegoose": "^7.4.5",
+    "apollo-server-express": "^2.19.0",
+    "bcrypt": "^5.0.0",
+    "class-validator": "^0.12.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "graphql": "^15.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.6",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   }
